--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!-- /*
-* Template Name: Style
-* Template Author: Untree.co
-* Tempalte URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -29,7 +24,7 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Style Free HTML Template by Untree.co</title>
+  <title> project recreation pt 1</title>
 </head>
 <body>
   <div class="lines-wrap">
@@ -465,7 +460,7 @@
         </div>
         <div class="col-lg-4">
 
-          <h2 class="mb-4">Don't miss the new season 2021 lookbook</h2>
+          <h2 class="mb-4">Don't miss the new season 2022 lookbook</h2>
           <div class="line my-3"></div>
           <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 
@@ -606,8 +601,7 @@
 
       <div class="row justify-content-center text-center copyright">
         <div class="col-md-8">
-          <p>Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. &mdash; Designed with love by <a href="https://untree.co">Untree.co</a> <!-- License information: https://untree.co/license/ -->
-          </p>
+         
         </div>
       </div>
     </div>
